# DistributedKV

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  GIT_GUIDE.md  README.md  build.ps1
.claude/skills/cpp-interview/: SKILL.md
.claude/skills/distributed-kv/: SKILL.md
.trae/skills/distributed-kv-expert/: SKILL.md
01_basics/pointers_vs_references/: pointers_vs_references.md
01_basics/variable_types/: variable_types.cpp  variable_types.md
DistributedKV/: .clangd  .gitignore  CMakeLists.txt  build.ps1  compile_commands.json
DistributedKV/.trae/skills/distributed-kv-expert/: SKILL.md
DistributedKV/docs/DistributedKV_Guide/: Learning_Manual.md
DistributedKV/include/: skiplist.h
DistributedKV/src/: main.cpp
DistributedKV/tests/: skiplist_test.cpp
docs/DistributedKV_Guide/: Learning_Manual.md  Test_Record.md
examples/: benchmark_skiplist.cpp
include/: kv_store.h  skiplist.h  sstable.h  sstable_builder.h  wal_record.h
src/: main.cpp
tests/: kv_store_test.cpp  skiplist_test.cpp  sstable_builder_test.cpp  wal_record_test.cpp
